--- a/public/css/side-menu.css
+++ b/public/css/side-menu.css
@@ -46,7 +46,7 @@ The content `<div>` is where all your content goes.
 .content {
     margin: 0 auto;
     padding: 0 2em;
-    max-width: 600px;
+    max-width: 800px;
     margin-bottom: 50px;
     line-height: 1.6em;
     font-size:20px;
@@ -243,7 +243,5 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     #layout.active .menu-link {
         left: 150px;
     }
-
-
 }
 
